--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "node server.js",
         "test": "mocha"
-    },
+      },
     "keywords": [],
     "author": "Justin Rice <jsrice7391@gmail.com>",
     "license": "ISC",
