--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node server.js",
-        "test": "mocha"
+        "start": "node server.js"
       },
     "keywords": [],
     "author": "Justin Rice <jsrice7391@gmail.com>",
