--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "passport-facebook": "^2.1.1",
         "passport-local": "^1.0.0",
         "path": "^0.12.7",
+        "dotenv": "^4.0.0",
         "sequelize": "^4.31.1"
     },
     "devDependencies": {
