--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "test": "mocha",
         "start": "node server.js"
     },
     "keywords": [],
@@ -13,7 +14,6 @@
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.2",
         "connect-flash": "^0.1.1",
-        "dotenv": "^4.0.0",
         "ejs": "^2.5.7",
         "express": "^4.16.2",
         "express-handlebars": "^3.0.0",
@@ -21,7 +21,8 @@
         "firebaseui": "^2.5.1",
         "mysql": "^2.15.0",
         "mysql2": "^1.5.1",
-        "nodemon": "^1.14.7",
+        "nodemailer": "^4.4.2",
+        "nodemon": "^1.14.11",
         "passport": "^0.4.0",
         "passport-facebook": "^2.1.1",
         "passport-local": "^1.0.0",
